[package]
name = "hourlybot-rs"
version = "0.2.11"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
edition = "2021"

[dependencies]
tokio-cron-scheduler = "0.9.4"
toml = "0.8.6"
rand = "0.8.5"

[dependencies.clap]
version = "3.2.23"
features = ["derive"]

[dependencies.mastodon-async]
version = "1.0"
features = ["toml", "mt"]

[dependencies.tokio]
version = "1.22.0"
features = ["macros", "io-util", "time"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["io"]
