[package]
name = "hourlybot-rs"
version = "0.4.11"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
edition = "2021"

[dependencies]
tokio-cron-scheduler = "0.10.0"
toml = "0.8.6"
rand = "0.8.5"
sha2 = "0.10.8"

[dependencies.clap]
version = "4.5.1"
features = ["derive"]

[dependencies.mastodon-async]
version = "1.0"
default-features = false
features = ["toml", "mt", "rustls-tls"]

[dependencies.tokio]
version = "1.22.0"
features = ["macros", "io-util", "time"]

[dependencies.tokio-util]
version = "0.7.4"
features = ["io"]
